--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,16 +1,13 @@
-body{
-    height: 100vh;
-}
-
 .container{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-color: var(cor-secundaria);
 }
 
 .principal{
-    background-color: aqua;
+    background-color: var(--cor-clara);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,6 +15,7 @@ body{
     height: 407px;
     border-radius: 10px;
     overflow: hidden;
+    box-shadow: 1px 1px 3px var(--cor-media);
 }
 
 .container .principal .imagem{
@@ -49,12 +47,14 @@ body{
     letter-spacing: 3px;
     text-transform: uppercase;
     margin-top: 10px;
+    color: var(--cor-primaria);
 }
 
 .informacoes .texto .titulo{
     font-size: 29px;
     line-height: 30px;
     margin-top: 16px;
+    color: var(--cor-escura);
 }
 
 .informacoes .texto .descricao{
@@ -62,6 +62,7 @@ body{
     font-size: 13px;
     line-height: 22px;
     margin-top: 15px;
+    color: var(--cor-media);
 }
 
 .informacoes .texto .precos{
@@ -75,10 +76,13 @@ body{
     font-size: 30px;
     font-weight: 700;
     margin-right: 15px;
+    color: var(--cor-primaria);
 }
 
 .informacoes .texto .preco{
     font-size: 10px;
+    text-decoration: line-through;
+    color: var(--cor-media);
 }
 
 .informacoes .botao{
@@ -94,7 +98,10 @@ body{
     font-weight: 700;
 }
 
-
+.informacoes .botao:hover{
+    cursor: pointer;
+    background-color: hsl(159, 32%, 23%);;
+}
 
 .carrinho{
     width: 15px;
