Adicionando layout responsivo a varios tamanhos de tela

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -109,3 +109,10 @@
     height: 15px;
     margin-right: 12px;
 }
+
+.attribution{
+    background-color: var(--cor-clara);
+    color: var(--cor-media);
+    text-align: center;
+    font-size: 12px;
+}
