--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -7,8 +7,7 @@
     }
 
     .container .principal .imagem.mobile{
-        background-image: url('../imagens/image-product-mobile.jpg');
-        background-size: cover;
+        background-image: url('../imagens/image-product-mobile.jpg') center;
         width: 100%;
         height: 50%;
     }
@@ -20,5 +19,44 @@
 
     .informacoes .botao{
         width: 100%;
+    }
+}
+
+@media(max-width: 690px){
+    .principal{
+        height: 95vh;
+    }
+
+    .informacoes{
+        display: flex;
+        justify-content: space-evenly;
+    }
+}
+
+@media(max-width: 400px){
+    .informacoes .texto .titulo{
+        font-size: 20px;
+    }
+
+    .informacoes .texto  .promocao{
+        font-size: 20px;
+    }
+}
+
+@media(max-width: 285px){
+    .informacoes .texto .titulo{
+        margin-top: 10px;
+    }
+
+    .informacoes .texto .descricao{
+        margin-top: 10px;
+    }
+
+    .informacoes .texto .precos{
+        margin-top: 10px;
+    }
+
+    .informacoes .botao{
+        margin-top: 5px;
     }
 }
