--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -2,10 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
+    
     border: none;
 }
 
 img{
     width: 100%;
+}
+
+a {
+    text-decoration: none;
 }
