--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -7,9 +7,9 @@
     }
 
     .container .principal .imagem.mobile{
-        background-image: url('../imagens/image-product-mobile.jpg') center;
+        background-image: url('../imagens/image-product-mobile.jpg') center center;
         width: 100%;
-        height: 50%;
+        height: 500%;
     }
 
     .informacoes{
