--- a/src/css/style.css
+++ b/src/css/style.css
@@ -111,7 +111,7 @@
 }
 
 .attribution{
-    background-color: var(--cor-clara);
+    background-color: var(--cor-secundaria);
     color: var(--cor-media);
     text-align: center;
     font-size: 12px;
