--- a/src/css/vaiaveis.css
+++ b/src/css/vaiaveis.css
@@ -4,5 +4,6 @@
     --cor-escura: hsl(212, 21%, 14%);
     --cor-media: hsl(228, 12%, 48%);
     --cor-clara: hsl(0, 0%, 100%);
+    --cor-extra: hsl(159, 32%, 23%);
 }
 
